# go-back-n

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
demo/: file-to-send.txt
src/: gbn.c  gbn.h  main.c  pipe.c  player.c  player.h  receiver.c  sender.c
utils/: check-demo.sh  run-demo.sh  stop-demo.sh
